--- a/a-ads.html
+++ b/a-ads.html
@@ -1,1 +1,1 @@
-
+<iframe data-aa='783215' src='//ad.a-ads.com/783215?size=234x60' scrolling='no' style='width:234px; height:60px; border:0px; padding:0;overflow:hidden' allowtransparency='true'></iframe>
